--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=346,349
+Size=346,495
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=348,23
-Size=607,369
+Size=1247,665
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=348,394
-Size=607,326
+Pos=348,690
+Size=1247,321
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=348,394
-Size=607,326
+Pos=348,690
+Size=1247,321
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,374
-Size=346,346
+Pos=0,520
+Size=346,491
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=957,23
-Size=323,697
+Pos=1597,23
+Size=323,988
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8418,7 +8418,7 @@ DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
 Pos=348,23
-Size=607,369
+Size=1247,665
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -10283,7 +10283,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=200,201 Size=1280,697 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
@@ -10298,8 +10298,8 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=200,201 Size=128
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,369 CentralNode=1 Selected=0xF86E1A46
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,326 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,665 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,321 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
