--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=346,495
+Size=346,349
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=348,23
-Size=1247,665
+Size=607,374
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,988
+Size=1280,697
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=348,690
-Size=1247,321
+Pos=348,399
+Size=607,321
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=348,690
-Size=1247,321
+Pos=348,399
+Size=607,321
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,520
-Size=346,491
+Pos=0,374
+Size=346,346
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1597,23
-Size=323,988
+Pos=957,23
+Size=323,697
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8418,7 +8418,7 @@ DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
 Pos=348,23
-Size=1247,665
+Size=607,374
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8440,7 +8440,6 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Projects]
-Pos=0,0
 Size=853,720
 Collapsed=0
 
@@ -10287,8 +10286,20 @@ Column 0  Sort=0v
 RefScale=20
 Column 0  Sort=0v
 
+[Table][0x0A99362C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x728B8EF0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEDE9D92A,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=37,129 Size=1280,697 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
