--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=346,495
+Size=390,494
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=348,23
-Size=1247,665
+Pos=392,23
+Size=1203,653
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=348,690
-Size=1247,321
+Pos=392,678
+Size=1203,333
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=348,690
-Size=1247,321
+Pos=392,678
+Size=1203,333
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,520
-Size=346,491
+Pos=0,519
+Size=390,492
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8417,8 +8417,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=348,23
-Size=1247,665
+Pos=392,23
+Size=1203,653
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8440,7 +8440,6 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Projects]
-Pos=0,0
 Size=853,720
 Collapsed=0
 
@@ -10299,15 +10298,19 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x14EE1DC1,4]
+RefScale=20
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1595,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=346,697 Split=Y Selected=0xB1CF606A
-        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,349 Selected=0xB1CF606A
-        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,346 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=607,697 Split=X
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=390,697 Split=Y Selected=0xB1CF606A
+        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,494 Selected=0xB1CF606A
+        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,492 Selected=0xACD52934
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1203,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10315,8 +10318,8 @@ DockSpace                   ID=0x8B93E3BD Pos=0,92 Size=1920,988 Split=X Selecte
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,665 CentralNode=1 Selected=0xF86E1A46
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,321 Selected=0xB3D94866
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,653 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,333 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
