Automatically apply textures from .mtl file when importing a model

--- a/imgui.ini
+++ b/imgui.ini
@@ -8175,7 +8175,7 @@ DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=392,23
-Size=1212,635
+Size=1212,640
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=392,660
-Size=1212,351
+Pos=392,665
+Size=1212,346
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,8 +8243,8 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=392,660
-Size=1212,351
+Pos=392,665
+Size=1212,346
 Collapsed=0
 DockId=0x00000008,1
 
@@ -8418,7 +8418,7 @@ DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
 Pos=392,23
-Size=1212,635
+Size=1212,640
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -10306,6 +10306,10 @@ Column 0  Sort=0v
 RefScale=20
 Column 0  Sort=0v
 
+[Table][0xCA2D4F02,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1604,988 Split=X
@@ -10322,8 +10326,8 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,9
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,635 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,351 Selected=0xB3D94866
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,349 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,346 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
