New update stuff

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,6 +1,6 @@
 {
     "ambientLight": 0.20000000298023224,
-    "exposure": 1.0,
+    "exposure": 2.880000114440918,
     "fullscreen_on_launch": true,
     "height": 720,
     "layers": [
@@ -8,7 +8,7 @@
     ],
     "linux_compiler": "g++",
     "mainScene": "assets/scenes/main.vault",
-    "name": "Test",
+    "name": "Vault Fortress",
     "post_processing": {
         "bloom": {
             "enabled": false,
