--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=390,494
+Size=351,494
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=392,23
-Size=1016,640
+Pos=353,23
+Size=1183,665
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=392,665
-Size=1016,346
+Pos=353,690
+Size=1183,321
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=392,665
-Size=1016,346
+Pos=353,690
+Size=1183,321
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
 Pos=0,519
-Size=390,492
+Size=351,492
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1410,23
-Size=510,988
+Pos=1538,23
+Size=382,988
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8324,8 +8324,7 @@ Size=495,386
 Collapsed=0
 
 [Window][Build for Linux##BuildLinuxDialog]
-ViewportPos=1112,252
-ViewportId=0x67FC57D7
+Pos=1112,183
 Size=741,513
 Collapsed=0
 
@@ -8417,8 +8416,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=392,23
-Size=1016,640
+Pos=353,23
+Size=1183,665
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8464,8 +8463,8 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=1606,657
-Size=314,354
+Pos=1538,657
+Size=382,354
 Collapsed=0
 DockId=0x00000016,0
 
@@ -10310,15 +10309,27 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x215CDFBD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x84CDE584,4]
+RefScale=20
+Column 0  Sort=0v
+
+[Table][0xAC1743D3,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1408,988 Split=X
+  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1536,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=390,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=351,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,494 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,492 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1016,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1183,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10326,12 +10337,12 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,9
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,349 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,346 Selected=0xB3D94866
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,665 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,321 Selected=0x3CB89FC3
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=510,988 Split=Y Selected=0x59EB5E58
+  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=382,988 Split=Y Selected=0x59EB5E58
     DockNode                ID=0x00000015 Parent=0x00000014 SizeRef=359,632 Selected=0x59EB5E58
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=359,354 Selected=0xFC3EA205
 
