added more stuff ors mth

--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=351,348
+Size=330,494
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=353,23
-Size=548,374
+Pos=332,23
+Size=1209,691
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=353,399
-Size=548,321
+Pos=332,716
+Size=1209,295
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=353,399
-Size=548,321
+Pos=332,716
+Size=1209,295
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,373
-Size=351,347
+Pos=0,519
+Size=330,492
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=903,23
-Size=377,697
+Pos=1543,23
+Size=377,988
 Collapsed=0
 DockId=0x00000015,0
 
@@ -8416,8 +8416,8 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][ Text Editor]
-Pos=353,23
-Size=548,374
+Pos=332,23
+Size=1209,691
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -10321,15 +10321,19 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x6DC2A2D1,4]
+RefScale=20
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=50,142 Size=1280,697 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1541,988 Split=X
     DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=351,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=330,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,494 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,492 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1188,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1209,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10337,8 +10341,8 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=50,142 Size=1280
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,665 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,321 Selected=0x3CB89FC3
+                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,691 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,295 Selected=0x3CB89FC3
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
