--- a/assets/game.config
+++ b/assets/game.config
@@ -25,6 +25,26 @@
         }
     },
     "resizable": true,
+    "shadow_mapping": {
+        "enabled": true,
+        "look_at": {
+            "x": 0.0,
+            "y": 1.0,
+            "z": 0.0
+        },
+        "map_height": 2048,
+        "map_width": 2048,
+        "near_far": {
+            "x": -48.599998474121094,
+            "y": 194.60000610351563
+        },
+        "ortho_size": 278.0,
+        "position": {
+            "x": -33.599998474121094,
+            "y": 37.5,
+            "z": 19.799999237060547
+        }
+    },
     "width": 1280,
     "windows_compiler": "x86_64-w64-mingw32-g++"
 }
