--- a/assets/game.config
+++ b/assets/game.config
@@ -1,12 +1,13 @@
 {
     "ambientLight": 0.20000000298023224,
-    "aspect_height": 1080,
-    "aspect_width": 1920,
+    "aspect_height": 720,
+    "aspect_width": 1280,
     "exposure": 1.0,
     "fullscreen_on_launch": false,
     "height": 720,
     "layers": [
-        "Default"
+        "Default",
+        "UI"
     ],
     "linux_compiler": "g++",
     "mainScene": "assets/scenes/main.vault",
