--- a/imgui.ini
+++ b/imgui.ini
@@ -8153,7 +8153,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Test]
-Pos=60,60
+Pos=1227,701
 Size=317,240
 Collapsed=0
 
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=380,494
+Size=330,348
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=382,23
-Size=1123,645
+Pos=332,23
+Size=541,403
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,988
+Size=1280,697
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=382,670
-Size=1123,341
+Pos=332,428
+Size=541,292
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=382,670
-Size=1123,341
+Pos=332,428
+Size=541,292
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][ Components]
-Pos=0,519
-Size=380,492
+Pos=0,373
+Size=330,347
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,10 +8287,10 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1507,23
-Size=413,988
+Pos=875,23
+Size=405,697
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000016,0
 
 [Window][ Save Material##SaveMaterialDialog]
 Pos=22,22
@@ -8413,11 +8413,11 @@ Collapsed=0
 Pos=383,409
 Size=557,311
 Collapsed=0
-DockId=0x8B93E3BD,1
+DockId=0x00000015,1
 
 [Window][ Text Editor]
-Pos=382,23
-Size=1123,645
+Pos=332,23
+Size=541,403
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -8463,10 +8463,10 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=1585,657
-Size=335,354
+Pos=868,397
+Size=372,250
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x00000014,0
 
 [Window][DebugOpenAL]
 Pos=60,60
@@ -8474,8 +8474,13 @@ Size=684,282
 Collapsed=0
 
 [Window][Dev Console]
-Pos=903,84
-Size=395,231
+Pos=901,397
+Size=418,247
+Collapsed=0
+
+[Window][Inventory]
+Pos=659,257
+Size=1007,525
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -10330,28 +10335,32 @@ Column 0  Sort=0v
 RefScale=20
 Column 0  Sort=0v
 
+[Table][0xB9AE8D4C,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000013 Parent=0x8B93E3BD SizeRef=1505,988 Split=X
-    DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
-    DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=380,697 Split=Y Selected=0xB1CF606A
-        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,494 Selected=0xB1CF606A
-        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,492 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1123,697 Split=X
-        DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
-        DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
-          DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
-            DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-              DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
-              DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,645 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,341 Selected=0xB3D94866
-                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
-            DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
-          DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000014 Parent=0x8B93E3BD SizeRef=413,988 Split=Y Selected=0x59EB5E58
-    DockNode                ID=0x00000015 Parent=0x00000014 SizeRef=359,632 Selected=0x59EB5E58
-    DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=359,354 Selected=0xFC3EA205
+DockSpace                     ID=0x8B93E3BD Pos=37,129 Size=1280,697 Split=X Selected=0x57ACBA5B
+  DockNode                    ID=0x00000015 Parent=0x8B93E3BD SizeRef=873,697 Split=X
+    DockNode                  ID=0x00000013 Parent=0x00000015 SizeRef=1642,988 Split=X
+      DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
+      DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
+        DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=330,697 Split=Y Selected=0xB1CF606A
+          DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,494 Selected=0xB1CF606A
+          DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,492 Selected=0xACD52934
+        DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=541,697 Split=X
+          DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
+          DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
+            DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
+              DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
+                DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
+                DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
+                  DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
+                    DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,694 CentralNode=1 Selected=0x57ACBA5B
+                    DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,292 Selected=0x3CB89FC3
+                  DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
+              DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
+            DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
+    DockNode                  ID=0x00000014 Parent=0x00000015 SizeRef=276,988 Selected=0x59EB5E58
+  DockNode                    ID=0x00000016 Parent=0x8B93E3BD SizeRef=405,697 Selected=0x59EB5E58
 
