--- a/assets/game copy.config
+++ b/assets/game copy.config
@@ -1,8 +1,8 @@
 {
-    "ambientLight": 0.1599999964237213,
+    "ambientLight": 0.20000000298023224,
     "aspect_height": 720,
     "aspect_width": 1280,
-    "exposure": 1.9700000286102295,
+    "exposure": 1.0,
     "fullscreen_on_launch": false,
     "height": 720,
     "layers": [
@@ -33,19 +33,19 @@
         "look_at": {
             "x": 0.0,
             "y": 1.0,
-            "z": 0.6000000238418579
+            "z": 0.0
         },
         "map_height": 4096,
         "map_width": 4096,
         "near_far": {
             "x": 1.0,
-            "y": 100.0
+            "y": 75.9000015258789
         },
         "ortho_size": 55.0,
         "position": {
-            "x": 0.0,
-            "y": 49.89373016357422,
-            "z": -30.40515899658203
+            "x": 8.199999809265137,
+            "y": 12.5,
+            "z": -11.5
         }
     },
     "width": 1280,
