--- a/imgui.ini
+++ b/imgui.ini
@@ -8160,7 +8160,7 @@ Collapsed=0
 [Window][Scene]
 Size=400,400
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][Hello world]
 Pos=270,119
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=330,348
+Size=318,562
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=332,23
-Size=541,403
+Pos=320,23
+Size=1258,698
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,10 +8211,10 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=332,428
-Size=541,292
+Pos=320,723
+Size=1258,288
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000018,0
 
 [Window][ Save Scene##SaveSceneDialog]
 ViewportPos=103,51
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=332,428
-Size=541,292
+Pos=320,723
+Size=1258,288
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000018,1
 
 [Window][ Components]
-Pos=0,373
-Size=330,347
+Pos=0,587
+Size=318,424
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,10 +8287,10 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=875,23
-Size=405,697
+Pos=1580,23
+Size=340,988
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x00000008,0
 
 [Window][ Save Material##SaveMaterialDialog]
 Pos=22,22
@@ -8324,7 +8324,7 @@ Size=495,386
 Collapsed=0
 
 [Window][Build for Linux##BuildLinuxDialog]
-Pos=1112,183
+Pos=513,19
 Size=741,513
 Collapsed=0
 
@@ -8357,31 +8357,31 @@ Collapsed=0
 Pos=378,23
 Size=1210,691
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000017,1
 
 [Window][##ScenePanel]
 Pos=378,23
 Size=570,400
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][Scene Panel]
 Pos=378,23
 Size=570,400
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][ Scene Panel]
 Pos=378,23
 Size=1210,691
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][ Scene Panel]
 Pos=378,23
 Size=567,369
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][Dear ImGui Demo]
 ViewportPos=782,338
@@ -8402,7 +8402,7 @@ DockId=0x00000011,0
 Pos=305,0
 Size=975,720
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000017,0
 
 [Window][Choose XML File##ChooseXML]
 Pos=60,60
@@ -8416,10 +8416,10 @@ Collapsed=0
 DockId=0x00000015,1
 
 [Window][ Text Editor]
-Pos=332,23
-Size=541,403
+Pos=320,23
+Size=1258,698
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000017,1
 
 [Window][Debugging]
 ViewportPos=1690,517
@@ -8463,10 +8463,10 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=868,397
-Size=372,250
+Pos=1580,519
+Size=340,492
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x0000000A,0
 
 [Window][DebugOpenAL]
 Pos=60,60
@@ -10339,28 +10339,36 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xF10D01F9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x77C58CFC,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                     ID=0x8B93E3BD Pos=37,129 Size=1280,697 Split=X Selected=0x57ACBA5B
-  DockNode                    ID=0x00000015 Parent=0x8B93E3BD SizeRef=873,697 Split=X
-    DockNode                  ID=0x00000013 Parent=0x00000015 SizeRef=1642,988 Split=X
-      DockNode                ID=0x00000011 Parent=0x00000013 SizeRef=303,720 Selected=0xF784E5DD
-      DockNode                ID=0x00000012 Parent=0x00000013 SizeRef=975,720 Split=X
-        DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=330,697 Split=Y Selected=0xB1CF606A
-          DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,494 Selected=0xB1CF606A
-          DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,492 Selected=0xACD52934
-        DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=541,697 Split=X
-          DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
-          DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
-            DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
-              DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-                DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
-                DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-                  DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                    DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=652,694 CentralNode=1 Selected=0x57ACBA5B
-                    DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=652,292 Selected=0x3CB89FC3
-                  DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
-              DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
-            DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-    DockNode                  ID=0x00000014 Parent=0x00000015 SizeRef=276,988 Selected=0x59EB5E58
-  DockNode                    ID=0x00000016 Parent=0x8B93E3BD SizeRef=405,697 Selected=0x59EB5E58
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1578,697 Split=X
+    DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
+    DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=318,697 Split=Y Selected=0xB1CF606A
+        DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,396 Selected=0xB1CF606A
+        DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,299 Selected=0xACD52934
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1258,697 Split=X
+        DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
+        DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
+          DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
+            DockNode        ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
+              DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
+              DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
+                DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
+                  DockNode  ID=0x00000017 Parent=0x00000007 SizeRef=1181,698 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1181,288 Selected=0x3CB89FC3
+                DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
+            DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
+          DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
+  DockNode                  ID=0x00000016 Parent=0x8B93E3BD SizeRef=340,697 Split=Y Selected=0x59EB5E58
+    DockNode                ID=0x00000008 Parent=0x00000016 SizeRef=340,494 Selected=0x59EB5E58
+    DockNode                ID=0x0000000A Parent=0x00000016 SizeRef=340,492 Selected=0xFC3EA205
 
