--- a/imgui.ini
+++ b/imgui.ini
@@ -10347,6 +10347,14 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x851F6791,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xFE9EF549,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1578,697 Split=X
