Added more shit

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,8 +1,13 @@
 {
-    "ambientLight": 0.2800000011920929,
+    "ambientLight": 0.4699999988079071,
+    "ambient_color": {
+        "x": 0.4959677457809448,
+        "y": 0.7317250370979309,
+        "z": 1.0
+    },
     "aspect_height": 720,
     "aspect_width": 1280,
-    "exposure": 2.140000104904175,
+    "exposure": 1.8600000143051147,
     "fullscreen_on_launch": false,
     "height": 720,
     "layers": [
@@ -38,14 +43,14 @@
         "map_height": 2048,
         "map_width": 2048,
         "near_far": {
-            "x": 24.100000381469727,
-            "y": 93.19999694824219
+            "x": 1.0,
+            "y": 177.60000610351563
         },
         "ortho_size": 104.0,
         "position": {
-            "x": 0.0,
-            "y": 57.49073028564453,
-            "z": -29.192493438720703
+            "x": -35.00657272338867,
+            "y": 42.216041564941406,
+            "z": -32.993133544921875
         }
     },
     "width": 1280,
