--- a/assets/game.config
+++ b/assets/game.config
@@ -1,5 +1,5 @@
 {
-    "ambientLight": 0.41999998688697815,
+    "ambientLight": 0.800000011920929,
     "ambient_color": {
         "x": 0.3709677457809448,
         "y": 0.6651931405067444,
@@ -34,7 +34,7 @@
     },
     "resizable": true,
     "shadow_mapping": {
-        "enabled": true,
+        "enabled": false,
         "look_at": {
             "x": 0.0,
             "y": 1.0,
