--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=318,562
+Size=339,562
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=320,23
-Size=1324,725
+Pos=341,23
+Size=1303,725
 Collapsed=0
 DockId=0x00000013,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=320,750
-Size=1324,261
+Pos=341,750
+Size=1303,261
 Collapsed=0
 DockId=0x00000018,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=320,750
-Size=1324,261
+Pos=341,750
+Size=1303,261
 Collapsed=0
 DockId=0x00000018,1
 
 [Window][ Components]
 Pos=0,587
-Size=318,424
+Size=339,424
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8288,7 +8288,7 @@ Collapsed=0
 
 [Window][ Inspector]
 Pos=1646,23
-Size=274,988
+Size=274,494
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8416,8 +8416,8 @@ Collapsed=0
 DockId=0x00000015,1
 
 [Window][ Text Editor]
-Pos=320,23
-Size=1324,725
+Pos=341,23
+Size=1303,725
 Collapsed=0
 DockId=0x00000013,1
 
@@ -8463,8 +8463,8 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=1006,373
-Size=274,347
+Pos=1646,519
+Size=274,492
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -10355,15 +10355,27 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x5BD00E10,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA8E34182,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE95DBDDA,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1004,697 Split=X
     DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=318,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=339,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,396 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,299 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=684,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=663,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10371,7 +10383,7 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,9
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,434 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,725 CentralNode=1 Selected=0x57ACBA5B
                   DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,261 Selected=0x3CB89FC3
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
