Deferred Shading & point light shadows

--- a/imgui.ini
+++ b/imgui.ini
@@ -8288,7 +8288,7 @@ Collapsed=0
 
 [Window][ Inspector]
 Pos=1646,23
-Size=274,494
+Size=274,988
 Collapsed=0
 DockId=0x00000008,0
 
@@ -10364,6 +10364,10 @@ RefScale=18
 Column 0  Sort=0v
 
 [Table][0xE95DBDDA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x20EFE8F6,4]
 RefScale=18
 Column 0  Sort=0v
 
