--- a/assets/game.config
+++ b/assets/game.config
@@ -1,13 +1,13 @@
 {
-    "ambientLight": 0.5,
+    "ambientLight": 0.6800000071525574,
     "ambient_color": {
-        "x": 1.0,
-        "y": 1.0,
+        "x": 0.34677422046661377,
+        "y": 0.7945500016212463,
         "z": 1.0
     },
     "aspect_height": 720,
     "aspect_width": 1280,
-    "exposure": 1.8600000143051147,
+    "exposure": 1.440000057220459,
     "fullscreen_on_launch": false,
     "height": 720,
     "layers": [
@@ -34,7 +34,7 @@
     },
     "resizable": true,
     "shadow_mapping": {
-        "enabled": false,
+        "enabled": true,
         "look_at": {
             "x": 0.0,
             "y": 1.0,
@@ -48,9 +48,9 @@
         },
         "ortho_size": 104.0,
         "position": {
-            "x": -35.00657272338867,
-            "y": 42.216041564941406,
-            "z": -32.993133544921875
+            "x": -38.211509704589844,
+            "y": 72.33668518066406,
+            "z": -34.2137451171875
         }
     },
     "width": 1280,
