--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=238,175
+Pos=435,132
 Size=844,376
 Collapsed=0
 
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=339,424
+Size=310,602
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=341,23
-Size=663,470
+Pos=312,23
+Size=1225,632
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=341,495
-Size=663,225
+Pos=312,657
+Size=1225,354
 Collapsed=0
 DockId=0x00000018,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=341,495
-Size=663,225
+Pos=312,657
+Size=1225,354
 Collapsed=0
 DockId=0x00000018,1
 
 [Window][ Components]
-Pos=0,449
-Size=339,271
+Pos=0,627
+Size=310,384
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=1006,23
-Size=274,697
+Pos=1539,23
+Size=381,988
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8416,8 +8416,8 @@ Collapsed=0
 DockId=0x00000015,1
 
 [Window][ Text Editor]
-Pos=341,23
-Size=663,470
+Pos=312,23
+Size=1225,632
 Collapsed=0
 DockId=0x00000013,1
 
@@ -8474,13 +8474,24 @@ Size=684,282
 Collapsed=0
 
 [Window][Dev Console]
-Pos=901,397
-Size=418,247
+ViewportPos=1176,474
+ViewportId=0x24C5E5E8
+Size=609,312
 Collapsed=0
 
 [Window][Inventory]
 Pos=659,257
 Size=1007,525
+Collapsed=0
+
+[Window][##SecondaryMenuBar]
+Pos=0,23
+Size=1920,50
+Collapsed=0
+
+[Window][StatusBar]
+Pos=0,651
+Size=1280,32
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -10372,14 +10383,14 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=87,179 Size=1280,697 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1004,697 Split=X
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=897,697 Split=X
     DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=339,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=310,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,602 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,384 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=663,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=585,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10387,12 +10398,12 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=87,179 Size=1280
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,761 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,225 Selected=0x3CB89FC3
+                  DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,221 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,354 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000016 Parent=0x8B93E3BD SizeRef=274,697 Split=Y Selected=0x59EB5E58
+  DockNode                  ID=0x00000016 Parent=0x8B93E3BD SizeRef=381,697 Split=Y Selected=0x59EB5E58
     DockNode                ID=0x00000008 Parent=0x00000016 SizeRef=340,494 Selected=0x59EB5E58
     DockNode                ID=0x0000000A Parent=0x00000016 SizeRef=340,492 Selected=0xFC3EA205
 
