Fixed some UI stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,28
-Size=378,516
+Size=343,516
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
-Pos=380,28
-Size=1146,685
+Pos=345,28
+Size=1181,685
 Collapsed=0
 DockId=0x00000013,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=380,715
-Size=1146,296
+Pos=345,715
+Size=1181,296
 Collapsed=0
 DockId=0x00000018,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=380,715
-Size=1146,296
+Pos=345,715
+Size=1181,296
 Collapsed=0
 DockId=0x00000018,1
 
 [Window][ Components]
 Pos=0,546
-Size=378,465
+Size=343,465
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8415,8 +8415,8 @@ Collapsed=0
 DockId=0x00000015,1
 
 [Window][ Text Editor]
-Pos=380,28
-Size=1146,685
+Pos=345,28
+Size=1181,685
 Collapsed=0
 DockId=0x00000013,1
 
@@ -10389,10 +10389,10 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,97 Size=1920,9
   DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1526,697 Split=X
     DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
-      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=378,697 Split=Y Selected=0xB1CF606A
+      DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=343,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,519 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,467 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1146,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1181,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10401,7 +10401,7 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,97 Size=1920,9
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
                   DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,685 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,296 Selected=0x3CB89FC3
+                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,296 Selected=0xB3D94866
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
