--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=435,132
+Pos=14,132
 Size=844,376
 Collapsed=0
 
@@ -10385,7 +10385,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=87,184 Size=1280,692 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=50,147 Size=1280,692 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1587,697 Split=X
     DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
@@ -10401,7 +10401,7 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=87,184 Size=1280
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
                   DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,644 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,337 Selected=0xB3D94866
+                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,337 Selected=0x3CB89FC3
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
