Fixed all garbage!

--- a/imgui.ini
+++ b/imgui.ini
@@ -8473,7 +8473,8 @@ Size=684,282
 Collapsed=0
 
 [Window][Dev Console]
-Pos=1120,362
+ViewportPos=1157,468
+ViewportId=0x24C5E5E8
 Size=652,487
 Collapsed=0
 
