--- a/assets/game.config
+++ b/assets/game.config
@@ -1,9 +1,9 @@
 {
     "ambientLight": 0.2199999988079071,
     "ambient_color": {
-        "x": 1.0,
-        "y": 0.7111995220184326,
-        "z": 0.5766128897666931
+        "x": 0.5165562629699707,
+        "y": 0.8079031705856323,
+        "z": 1.0
     },
     "aspect_height": 720,
     "aspect_width": 1280,
@@ -34,7 +34,7 @@
     },
     "resizable": true,
     "shadow_mapping": {
-        "enabled": false,
+        "enabled": true,
         "look_at": {
             "x": 0.0,
             "y": 1.0,
@@ -44,13 +44,13 @@
         "map_width": 3000,
         "near_far": {
             "x": 1.0,
-            "y": 0.0
+            "y": 75.0
         },
-        "ortho_size": 19.0,
+        "ortho_size": -16.0,
         "position": {
-            "x": 0.0,
-            "y": 7.586926460266113,
-            "z": 0.0
+            "x": -12.282702445983887,
+            "y": 12.377102851867676,
+            "z": -7.986114978790283
         }
     },
     "width": 1280,
