Added Getting instances of other entity classes in C#

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,15 +1,20 @@
 {
-    "ambientLight": 0.2199999988079071,
+    "3d_gravity": {
+        "x": 0.0,
+        "y": -50.0,
+        "z": 0.0
+    },
+    "ambientLight": 0.20000000298023224,
     "ambient_color": {
         "x": 0.5165562629699707,
-        "y": 0.8079031705856323,
+        "y": 0.750274121761322,
         "z": 1.0
     },
-    "aspect_height": 720,
-    "aspect_width": 1280,
+    "aspect_height": 1080,
+    "aspect_width": 1920,
     "exposure": 1.2599999904632568,
-    "fullscreen_on_launch": false,
-    "height": 720,
+    "fullscreen_on_launch": true,
+    "height": 1080,
     "layers": [
         "Default",
         "UI"
@@ -40,19 +45,19 @@
             "y": 1.0,
             "z": 0.0
         },
-        "map_height": 3000,
-        "map_width": 3000,
+        "map_height": 5000,
+        "map_width": 5000,
         "near_far": {
             "x": 1.0,
             "y": 75.0
         },
-        "ortho_size": -16.0,
+        "ortho_size": -14.0,
         "position": {
-            "x": -12.282702445983887,
-            "y": 12.377102851867676,
-            "z": -7.986114978790283
+            "x": 12.036592483520508,
+            "y": 14.84128189086914,
+            "z": -8.24539852142334
         }
     },
-    "width": 1280,
+    "width": 1920,
     "windows_compiler": "x86_64-w64-mingw32-g++"
 }
