Instantiating & Loading Scenes fully fixed now hopefully!

--- a/imgui.ini
+++ b/imgui.ini
@@ -8438,6 +8438,7 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Projects]
+Pos=0,0
 Size=853,720
 Collapsed=0
 
@@ -10397,8 +10398,12 @@ Column 0  Sort=0v
 RefScale=20
 Column 0  Sort=0v
 
+[Table][0x8F5D5387,4]
+RefScale=20
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=50,147 Size=1280,692 Split=X Selected=0x57ACBA5B
+DockSpace                   ID=0x8B93E3BD Pos=50,147 Size=1280,692 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1587,697 Split=X
     DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
