Removed CZMQ.h header

--- a/imgui.ini
+++ b/imgui.ini
@@ -10431,6 +10431,10 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x16FD35C9,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,60 Size=1920,964 Split=X Selected=0x57ACBA5B
   DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1581,697 Split=X
